add: はじめの挨拶を追記

--- a/src/guide/001.env.md
+++ b/src/guide/001.env.md
@@ -1,7 +1,9 @@
 # はじめに
 
-このサイトは自身のサーバーを操作する過程で生まれたメモ帳です。  
-折角なので（どこからでも見れるように）公開しました。  
+このサイトは自身のサーバーを構築する過程で生まれたメモ帳です。  
+（どこからでも見れるように）公開しています。  
+
+ネットの海から拾った情報はちゃんと還元しないとね～。（持論）  
 
 
 
@@ -22,7 +24,7 @@
   - GPU: Intel Iris Xe (80 units)
 - RAM: CFD D4N3200CM-16GR 16GB (DDR4 SO-DIMM (260pin), DDR4-3200 CL22)
 - ROM: Crucial CT525MX300SSD1 MX300 525GB (2016, 2.5inch, 3D TLC NAND, SATA 6Gbps)
-- キーボードは US87
+- 使うキーボードは US87
 
 気が付いたら届いてた。  
 単純CPUスコア比較で i7 7700 と同等。ビビる。  
