add: アプデ sudores SSHについて記載

--- a/src/guide/011.init.md
+++ b/src/guide/011.init.md
@@ -1,6 +1,28 @@
-# アカウント作成とSSH環境構築
+# 最初にやること
+
+## update / editor
 
 これをしないと始まらない。  
+
+参考: [Ubuntu のアップデート方法 \- Qiita](https://qiita.com/masoo/items/8ebc51a6a9f32417d4a3)  
+
+```bash
+# アップデート確認
+$ sudo apt update
+
+# パッケージをアップデートする
+$ sudo apt dist-upgrade
+
+# アップデートで必要なくなったパッケージの削除
+$ sudo apt autoremove
+
+
+# エディタのインストール
+$ sudo apt install vim
+```
+
+私の宗派は `Vim` なのでついでにインストール。  
+（どうせ設定編集でしか使わないし...矢印つかえるし...）  
 
 
 
@@ -32,6 +54,7 @@ $ sudo login
 $ sudo visudo
 ```
 
+::: tip
 記憶だと `wheel` ってグループだと思ってたけど、これは CentOS 仕様らしい。  
 ちなみに big wheel (大物) が語源らしい。  
 `sudo` のほうが分かりやすいよね。  
@@ -55,9 +78,23 @@ root    ALL=(ALL:ALL) ALL
 
 参考: [permissions \- What is the difference between the 'sudo' and 'admin' group? \- Ask Ubuntu](https://askubuntu.com/questions/43317/what-is-the-difference-between-the-sudo-and-admin-group)  
 
+ちなみにこれの読み方は `<誰が> <どのホストで>=(<誰として>) <何ができるか>` という感じらしい。  
+`%sudo   ALL=(ALL:ALL) ALL` を解読すると、
+
+- %sudo: sudo というグループは
+- ALL: どこでも
+- (ALL:ALL): どのユーザーでも、どのグループでも
+- ALL: なんでもできる
+
+という要するに管理者って意味ですね。  
+これはめっちゃ細く設定できるので、サーバーや制限ユーザー作成時にはちゃんと設定すべしな気がした。  
+
+参考: [sudoers覚え書き \- Qiita](https://qiita.com/progrhyme/items/6f936033b9d23efb1741)  
+:::
 
 
-## ssh 接続の設定
+
+## SSH 接続の設定
 
 linux の使用目的の大半は `ssh` 。  
 母艦から操作できるようにしたほうが楽なので使えるようにする。  
@@ -119,5 +156,43 @@ $ diff -U 0 sshd_config.copy sshd_config
 ローカルでは任意のPCからアクセスしたい可能性が想定されるので。  
 鍵設定はまた今度。（直近で使う予定がない）  
 
+
+::: tip
 てか `Match` 便利だねぇ... 複雑なこともなんでもできそう。  
 個人的には鍵なら全てのユーザーにログイン可能、ってことをやりたかったんだけど、Matchにその構文が無かった...。  
+:::
+
+
+
+## SSH 接続を行う
+
+母艦、別のPCから以下のコマンドで SSH 接続できる。  
+
+```bash
+$ ssh <ユーザー名>@<アドレス> -p <ポート番号>
+=> パスワード入力
+```
+
+これができたら後はリモートで作業しても良い。  
+PCはログアウトして放置しておこう。  
+
+:::warning
+```bash
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@    WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!     @
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+```
+
+これは前回のアクセス時と環境が違うよ！という警告です。  
+ホストの公開鍵が違うので中間者攻撃されているかもよ、という親切心の塊です。  
+焦らず対象のホストの記録をローカルから消しましょう。  
+
+```bash
+$ ssh-keygen -R <アドレス>
+```
+
+（はじめサーバー側のエラーかと思って、設定ファイルとにらめっこしていたのは内緒。）  
+（英語は Google 翻訳にかけてでも読もう。）  
+
+参考: [「SSHホスト鍵が変わってるよ！」と怒られたときの対処 \- Qiita](https://qiita.com/hnw/items/0eeee62ce403b8d6a23c)  
+:::
