--- a/src/guide/001.env.md
+++ b/src/guide/001.env.md
@@ -7,7 +7,7 @@
 
 
 
-## 端末環境
+## 端末 (Intel NUC 11)
 
 本体はこれ。  
 
@@ -27,19 +27,26 @@
 - 使うキーボードは US87
 
 気が付いたら届いてた。  
-単純CPUスコア比較で i7 7700 と同等。ビビる。  
-ゲーム・編集用途以外はもうこれでよくねと。  
+passmark のスコア比較で i7 7700 と同等。ビビる。  
+（これは低電圧版なので厳密に比べるのは難しいが）  
 
+参考: [CPU性能比較表 \| 最新から定番のCPUまで簡単に比較](https://pcrecommend.com/cpu/)  
+
+ゲーム・編集用途以外はもうこれでよくねと。  
 Linux の勉強と Iris Xe が使ってみたかったのが購入動機。  
 自宅鯖兼開発鯖にしたい。  
 
-----
+
+
+## OS (Ubuntu Budgie)
 
 OSはこれ。  
 
 <img src="/assets/budgie.png" width="320px">  
 
 [Ubuntu Budgie](https://ubuntubudgie.org/)  
+
+参考: [Ubuntu Budgie 20\.04\.1 LTS リリース！ 〜意外に軽い高機能Ubuntu Budgie最新edition・・その出来は如何？・・。](https://www.linux-setting.tokyo/2020/08/ubuntu-budgie-20041-ubuntu-budgieedition.html)  
 
 - OS: ubuntu Budgie 20.04.3 LTS  
 
