test: 画像の表示方法模索

--- a/src/guide/001.env.md
+++ b/src/guide/001.env.md
@@ -11,7 +11,7 @@
 
 本体はこれ。  
 
-<img src="/assets/NUC11PABi5.jpg" width="320px">  
+<img src="./assets/NUC11PABi5.jpg" width="320px">  
 
 [Intel NUC 11 Performance kit NUC11PAHi5 製品仕様](https://ark.intel.com/content/www/jp/ja/ark/products/205040/intel-nuc-11-performance-kit-nuc11pahi5.html)  
 [インテル® NUC 11 パフォーマンス・キット \- NUC11PAHi5](https://www.intel.co.jp/content/www/jp/ja/products/sku/205040/intel-nuc-11-performance-kit-nuc11pahi5/specifications.html)  
@@ -42,7 +42,7 @@ Linux の勉強と Iris Xe が使ってみたかったのが購入動機。
 
 OSはこれ。  
 
-<img src="/assets/budgie.png" width="320px">  
+<img src="~@alias/budgie.png" width="320px">  
 
 [Ubuntu Budgie](https://ubuntubudgie.org/)  
 
