--- a/src/guide/001.env.md
+++ b/src/guide/001.env.md
@@ -42,7 +42,7 @@ Linux の勉強と Iris Xe が使ってみたかったのが購入動機。
 
 OSはこれ。  
 
-<img src="~@alias/budgie.png" width="320px">  
+<img src="./budgie.png" width="320px">  
 
 [Ubuntu Budgie](https://ubuntubudgie.org/)  
 
@@ -94,7 +94,7 @@ $ sudo apt install neofetch
 $ neofetch
 ```
 
-<img src="/assets/neofetch.png" width="720px">  
+<img src="/mbs-budgie/assets/neofetch.png" width="720px">  
 
 参考: [Ubuntuのバージョン確認 \- Qiita](https://qiita.com/glires/items/a2a07565207509af0e83)  
 参考: [【画像あり】neofetchをいろんなOSで使ってみた！ \- Qiita](https://qiita.com/awaha/items/2f83a82b79b316ea3e06)  
